# MedAgentCare

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  TODO.md  api.py  compose.yaml  config.py  main.py  pyproject.toml  requirements.txt  setup.py
.agents/skills/: skill_helpers.py
.agents/skills/assess-risk/: SKILL.md
.agents/skills/clinical-guideline/: SKILL.md
.agents/skills/search-history/: SKILL.md
.claude/skills/: skill_helpers.py
.github/workflows/: ci.yml
agents/: base_agent.py  consultation_agent.py  diagnostic_agent.py  research_agent.py  skill_registry_mixin.py
constraints/: agent_constraints.yaml
core/: __init__.py  agent_loop.py  llm_client.py  skill_loader.py  skill_registry.py
examples/: test_all.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  styles.css
knowledge/: milvus_kb.py
knowledge/scripts/: import_hardcoded_data.py
memory/: __init__.py  entropy_manager.py  long_term.py  session_summary.py  short_term.py
research/: deep_research_workflow.py  evidence_synthesizer.py  knowledge_base.py
src/medagentcare/: __init__.py  api.py  config.py  main.py  response_sections.py
swarm/: __init__.py  lead_agent.py  shared_context.py  swarm_coordinator.py
tests/: __init__.py  test_api_offline.py  test_assess_risk_skill.py  test_conversation_store.py  test_interview_routing.py  test_interview_state.py  test_local_health_memory.py  test_medical_safety_constraints.py  test_milvus_kb.py  test_response_sections.py  test_runtime_config.py  test_skill_discovery.py  test_swarm_routing.py
validation/: __init__.py  auto_fixer.py  auto_fixer_20260428_231043.py
(+65 files in other folders)
