[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "medagentcare"
version = "0.1.0"
description = "Multi-agent medical assistant system for MedAgentCare"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "MedAgentCare Team" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Healthcare Industry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "openai>=1.33.0,<2.0.0",
    "sentence-transformers==5.3.0",
    "torch>=2.0.0",
    "transformers>=4.41.0",
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn[standard]>=0.32.0,<1.0.0",
    "pydantic==2.10.0",
    "pydantic-settings==2.7.0",
    "mem0ai==0.1.0",
    "redis==5.2.0",
    "qdrant-client==1.12.0",
    "pymilvus[milvus_lite]>=2.3.0",
    "requests==2.32.0",
    "beautifulsoup4==4.12.3",
    "duckduckgo-search==6.3.5",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "loguru==0.7.3",
    "python-dotenv==1.0.1",
    "pyyaml==6.0.3",
    "tqdm>=4.65.0",
    "aiohttp>=3.8.0",
    "httpx>=0.24.0",
]

[project.scripts]
medagentcare = "medagentcare.main:main"
medagentcare-import-knowledge = "medagentcare.knowledge.scripts.import_hardcoded_data:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"medagentcare.constraints" = ["*.yaml"]
"medagentcare.knowledge" = ["data/README.md", "data/documents/*.txt"]
